--- a/MemeMe/View/LaunchScreen.storyboard
+++ b/MemeMe/View/LaunchScreen.storyboard
@@ -17,13 +17,25 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_udacity_white" translatesAutoresizingMaskIntoConstraints="NO" id="7y6-lV-4ff">
+                                <rect key="frame" x="87" y="385" width="240" height="126"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="7y6-lV-4ff" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="qkf-ih-sfs"/>
+                            <constraint firstItem="7y6-lV-4ff" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="s6r-nR-K71"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="image_udacity_white" width="240" height="126"/>
+    </resources>
 </document>
